--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,12 +3,22 @@ services:
         class: Ez\ConferenceRestBundle\Rest\Controller\SpeakersController
         parent: ezpublish_rest.controller.base
 
-    ez.value_object_visitor.speaker:
+    ez.value_object_visitor.speakers:
         parent: ezpublish_rest.output.value_object_visitor.base
         class: Ez\ConferenceRestBundle\Rest\ValueObjectVisitor\Speakers
         arguments: [ @ezpublish_rest.field_type_serializer ]
         tags:
             - { name: ezpublish_rest.output.value_object_visitor, type: Ez\ConferenceRestBundle\Rest\Values\Speakers }
+
+    ez.controller.speaker:
+        class: Ez\ConferenceRestBundle\Rest\Controller\SpeakerController
+        parent: ezpublish_rest.controller.base
+
+    ez.value_object_visitor.speaker:
+        parent: ezpublish_rest.output.value_object_visitor.base
+        class: Ez\ConferenceRestBundle\Rest\ValueObjectVisitor\Speaker
+        tags:
+            - { name: ezpublish_rest.output.value_object_visitor, type: Ez\ConferenceRestBundle\Rest\Values\Speaker }
 
     ez.controller.talk:
         class: Ez\ConferenceRestBundle\Rest\Controller\TalkController
