--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,33 +1,63 @@
+parameters:
+    # Controller for Speakers
+    ez.controller.speakers.class: Ez\ConferenceRestBundle\Rest\Controller\SpeakersController
+
+    # Rest object for Speakers
+    ez.value_object_visitor.speakers.class: Ez\ConferenceRestBundle\Rest\ValueObjectVisitor\Speakers
+    ez.value.speakers.class: Ez\ConferenceRestBundle\Rest\Values\Speakers
+
+    # Rest object for Speaker
+    ez.value_object_visitor.speaker.class: Ez\ConferenceRestBundle\Rest\ValueObjectVisitor\Speaker
+    ez.value.speaker.class: Ez\ConferenceRestBundle\Rest\Values\Speaker
+
+    # Controller for Talks
+    ez.controller.talk.class: Ez\ConferenceRestBundle\Rest\Controller\TalkController
+
+    # Rest object for Talk
+    ez.value_object_visitor.talk.class: Ez\ConferenceRestBundle\Rest\ValueObjectVisitor\Talk
+    ez.value.talk.class: Ez\ConferenceRestBundle\Rest\Values\Talk
+
+    # Class for service talk
+    ez.conference.talk.class: Ez\ConferenceRestBundle\Services\TalkService
+
 services:
+    # Speakers Rest conf
     ez.controller.speakers:
-        class: Ez\ConferenceRestBundle\Rest\Controller\SpeakersController
+        class: %ez.controller.speakers.class%
         parent: ezpublish_rest.controller.base
 
     ez.value_object_visitor.speakers:
         parent: ezpublish_rest.output.value_object_visitor.base
-        class: Ez\ConferenceRestBundle\Rest\ValueObjectVisitor\Speakers
+        class: %ez.value_object_visitor.speakers.class%
         arguments: [ @ezpublish_rest.field_type_serializer ]
         tags:
-            - { name: ezpublish_rest.output.value_object_visitor, type: Ez\ConferenceRestBundle\Rest\Values\Speakers }
-
-    ez.controller.speaker:
-        class: Ez\ConferenceRestBundle\Rest\Controller\SpeakerController
-        parent: ezpublish_rest.controller.base
+            - { name: ezpublish_rest.output.value_object_visitor, type: %ez.value.speakers.class% }
 
     ez.value_object_visitor.speaker:
         parent: ezpublish_rest.output.value_object_visitor.base
-        class: Ez\ConferenceRestBundle\Rest\ValueObjectVisitor\Speaker
+        class: %ez.value_object_visitor.speaker.class%
         arguments: [ @ezpublish_rest.field_type_serializer ]
         tags:
-            - { name: ezpublish_rest.output.value_object_visitor, type: Ez\ConferenceRestBundle\Rest\Values\Speaker }
+            - { name: ezpublish_rest.output.value_object_visitor, type: %ez.value.speaker.class% }
 
+    # Talk Rest conf
     ez.controller.talk:
-        class: Ez\ConferenceRestBundle\Rest\Controller\TalkController
+        class: %ez.controller.talk.class%
         parent: ezpublish_rest.controller.base
 
     ez.value_object_visitor.talk:
         parent: ezpublish_rest.output.value_object_visitor.base
-        class: Ez\ConferenceRestBundle\Rest\ValueObjectVisitor\Talk
+        class: %ez.value_object_visitor.talk.class%
         arguments: [ @ezpublish_rest.field_type_serializer ]
         tags:
-            - { name: ezpublish_rest.output.value_object_visitor, type: Ez\ConferenceRestBundle\Rest\Values\Talk }
+            - { name: ezpublish_rest.output.value_object_visitor, type: %ez.value.talk.class% }
+
+    # Talk Service
+    ez.conference.rest.talk:
+        class: %ez.conference.talk.class%
+        arguments:
+            - @ezpublish.config.resolver.core
+            - @ezpublish.api.service.location
+            - @ezpublish.api.service.search
+            - @ezpublish.api.service.content
+            - @ezpublish.api.service.content_type
