Adding talk in the XML of a speaker and correcting list of talk

--- a/Resources/config/routing_rest.yml
+++ b/Resources/config/routing_rest.yml
@@ -5,7 +5,7 @@ ez_get_speakers:
     methods: [GET]
 
 ez_get_speaker:
-    pattern: /speaker/{id}
+    pattern: /speaker/{speakerId}
     defaults:
         _controller: ez.controller.speakers:getSpeaker
     methods: [GET]
